handle dependencies on package removal

BUG: 315063